# backend/src/api/restRouter.js
@@ -1,4 +1,5 @@
 import express from 'express';
+import blogRouter from './resources/blog/blog.restRouter';
 import eventRouter from './resources/event/event.restRouter';
 import infoRouter from './resources/info/info.restRouter';
 import introRouter from './resources/intro/intro.restRouter';
@@ -6,6 +7,7 @@ import serviceRouter from './resources/service/service.restRouter';
 
 const restRouter = express.Router();
 
+restRouter.use('/blog', blogRouter);
 restRouter.use('/event', eventRouter);
 restRouter.use('/info', infoRouter);
 restRouter.use('/intro', introRouter);
